kubeapps/objects/kubeappsingressinternalrhelvass.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kubeappsingress
  annotations:
    kubernetes.io/ingress.class: ingressinternal
spec:
  rules:
  - host: kubeapps.appsint.k8s.labs.vass.es # IMPORTANT: update <ingress ip> with the dashed public IP of your ingress, for example frontend.13-68-177-68.nip.io
    http:
      paths:
      - backend:
          serviceName: kubeapps
          servicePort: 80
        path: /
